@@ -2,6 +2,8 @@ Changes for Perl extension DateTime-Tiny
 
 {{$NEXT}}
 
+    - Fix tests with DateTime::Locale 1.33 and later
+
 1.07      2018-04-22 11:06:08+02:00 Europe/Oslo
 
     - Bugfix: only match ASCII digits in from_string() method.
